Fixed embed spacing

--- a/source/canvas.scss
+++ b/source/canvas.scss
@@ -5,8 +5,6 @@
     .markdown-embed-title {
         padding: 0;
         font-size: 2rem;
-        display: flex;
-        justify-content: center;
         background: none;
     }
 
