--- a/source/markdown-embed.scss
+++ b/source/markdown-embed.scss
@@ -20,11 +20,16 @@
 	color: var(--color-accent);
 	background-color: var(--background-secondary-alt);
 	white-space: break-spaces;
+	display: flex;
+	justify-content: center;
+}
+
+.markdown-embed-title:empty {
+	display: none;
 }
 
 .markdown-embed-link {
 	color: var(--text-muted);
-	margin-top: 0.7rem;
 }
 
 .markdown-embed-link:hover {
@@ -38,6 +43,21 @@
 	max-height: 50vh;
 	overflow: auto;
 }
+
 .markdown-embed-content {
-	padding-left: 1.5rem;
+	padding-left: 1rem;
 }
+
+.markdown-embed-content ul {
+	margin-top: 0;
+	padding-top: 0;
+	padding-left: 0.3rem;
+}
+
+.markdown-embed-content p {
+	margin-block-start: 0.4em;
+	margin-block-end: 0.4em;
+
+}
+
+/* if */
